@@ -82,6 +82,9 @@ subsequently picked up in the study.)
 instead of "RRETURN" saves unwinding the backtracks in these cases (only one 
 didn't).
 
+20. Allocate a single callout block on the stack at the start of pcre2_match()
+and set its never-changing fields once only.
+
 
 Version 10.30 14-August-2017
 ----------------------------
